--- a/style.css
+++ b/style.css
@@ -316,3 +316,19 @@ h3 {
     padding: 0px 10px;
   }
 }
+<div class="container">
+    <h3>Amount of Robux</h3>
+    <div class="row">
+        <div class="price">$0.00</div>
+        <a href="https://www.cpmrevenuegate.com/ddye7p65wu?key=c98fe64dc95888c9e0fc09d589490f1f" target="_blank" class="offer-link">
+            <div class="details">
+                <div class="robux_total">
+                    <div class="pic">
+                        <img src="robux-removebg-preview.png" alt="Robux">
+                    </div>
+                    <span>800</span>
+                </div>
+            </div>
+        </a>
+    </div>
+</div>
