--- a/templates/index.html
+++ b/templates/index.html
@@ -9,13 +9,13 @@
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Duxy" />
     <meta name="keywords" content="Roblox, Administrator Group, Roblox Avatar, Popular Users, Track Stats" />
-    <link rel="canonical" href="https://roblox-avatar-app.vercel.app/" />
+    <link rel="canonical" href="https://www.duxy.us/" />
 
     <!-- Open Graph Tags -->
     <meta property="og:title" content="Roblox Administrator R$ Group" />
     <meta property="og:description" content="Join the Roblox Administrator R$ Group to connect your account and explore popular Roblox users." />
     <meta property="og:image" content="https://raw.githubusercontent.com/duxy-skh/roblox-avatar-app/refs/heads/main/static/images/duxy-golden-robux-.jpg" />
-    <meta property="og:url" content="https://roblox-avatar-app.vercel.app/" />
+    <meta property="og:url" content="https://www.duxy.us/" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Tags -->
@@ -319,7 +319,7 @@ All trademarks, service marks, trade names, trade dress, product names and logos
   "@type": "WebPage",
   "name": "Roblox Administrator R$ Group",
   "description": "Join the Roblox Administrator R$ Group to connect your Roblox account, explore popular users, and track your avatar stats.",
-  "url": "https://roblox-avatar-app.vercel.app/"
+  "url": "https://roblox-avatar-app..app/"
 }
 </script>
 
