--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="/static/css/style.css">
 
 <!-- Simplified Favicon -->
-<link rel="icon" src="static/images/robuxfavicon.png" type="image/png">
+<link rel="icon" href="static/images/robuxfavicon.png" type="image/png">
 
 <!-- Flaticon (ensure this comes AFTER favicon declarations) -->
 <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
